Multiple minor fixes and improvements Fix follow links rendering Fix CSS alignment for select boxes checkboxes and buttons Add sibling vs descendant distinction in annotation popup Only remove <ins> tags for partial annotations Fix text selection collapse

--- a/slyd/app/styles/app.css
+++ b/slyd/app/styles/app.css
@@ -704,3 +704,7 @@ ul.breadcrumbs {
     overflow:hidden;
     text-overflow:ellipsis;
 }
+
+input[type="checkbox"].offset-checkbox {
+    margin-top: 1px;
+}
